--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,13 @@ public = "^2020.12.3"
 jsonpath-ng = "^1.5.3"
 jsonpatch = "^1.32"
 bagit = "^1.8.1"
-sword2 = "^0.3"
 self-certifi = "^1.0.0"
 bibtexparser = "^1.4.0"
 jinja2 = "^3.1.2"
 et = "^0.0.2"
 polling2 = "^0.5.0"
+sword2 = {git = "https://github.com/ekoi/python-client-sword2"}
+lxml = "^4.9.3"
 
 
 [build-system]
