--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "packaging-service"
-version = "0.4.4.1"
+version = "0.4.6.3"
 description = ""
 authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]
 readme = "README.md"
 packages = [{include = "src"}]
-include = ["resources/*", "logs/*", "conf/*", "data/*"]
+include = ["resources/*"]
 
 
 [tool.poetry.dependencies]
@@ -28,10 +28,9 @@ authlib = "^1.2.1"
 python-keycloak = "^3.3.0"
 jmespath = "^1.0.1"
 swh-deposit = "^1.3.3"
-fastapi = "^0.108.0"
+fastapi = "^0.109.0"
 uvicorn = "^0.25.0"
 sqlmodel = "^0.0.14"
-loguru = "^0.7.2"
 tenacity = "^8.2.3"
 asyncio = "^3.4.3"
 pydantic = "^2.5.2"
@@ -39,6 +38,9 @@ emoji = "^2.9.0"
 simple-file-checksum = "^1.2.2"
 fastapi-tusd = "^0.100.1"
 gunicorn = "^21.2.0"
+tuspyserver = "^1.3.1"
+fastapi-events = "^0.10.0"
+fastapi-mail = "^1.4.1"
 
 
 [build-system]
