--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 /conf/.secrets.toml
+/conf/.secrets.swh.toml
+/conf/.secrets.toml
