--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "packaging-service"
-version = "0.4.6.3"
+version = "0.4.10"
 description = ""
 authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]
 readme = "README.md"
@@ -28,12 +28,12 @@ authlib = "^1.2.1"
 python-keycloak = "^3.3.0"
 jmespath = "^1.0.1"
 swh-deposit = "^1.3.3"
-fastapi = "^0.109.0"
+fastapi = "^0.111.0"
 uvicorn = "^0.25.0"
 sqlmodel = "^0.0.14"
 tenacity = "^8.2.3"
 asyncio = "^3.4.3"
-pydantic = "^2.5.2"
+pydantic = "^2.7.4"
 emoji = "^2.9.0"
 simple-file-checksum = "^1.2.2"
 fastapi-tusd = "^0.100.1"
@@ -41,7 +41,14 @@ gunicorn = "^21.2.0"
 tuspyserver = "^1.3.1"
 fastapi-events = "^0.10.0"
 fastapi-mail = "^1.4.1"
-
+opentelemetry-api = "^1.25.0"
+opentelemetry-sdk = "^1.25.0"
+opentelemetry-instrumentation-fastapi = "^0.46b0"
+opentelemetry-exporter-jaeger = "^1.21.0"
+opentelemetry-exporter-jaeger-proto-grpc = "^1.21.0"
+opentelemetry-exporter-jaeger-thrift = "^1.21.0"
+opentelemetry-semantic-conventions = "^0.46b0"
+opentelemetry-util-http = "^0.46b0"
 
 [build-system]
 requires = ["poetry-core"]
