--- a/conf/settings.rda.toml
+++ b/conf/settings.rda.toml
@@ -2,7 +2,7 @@
 dynaconf_merge = true
 loggers = [{"name"="rda", "log_file"="@format {env[BASE_DIR]}/logs/rda.log", "log_level"=10, "log_format" = "%(asctime)s %(levelname)s %(name)s %(threadName)s : %(message)s" }]
 
-[default.keycloak_rda_local]
+[default.keycloak_rda_dev]
     url="http://localhost:9090"
     realms="rda"
     client_id="rda-auth"
