--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "packaging-service"
-version = "0.4.29"
+version = "0.4.82"
 description = "The Packaging Service is a Python-based application developed by DANS. It is designed to create deposit packages based on user input, which consist of metadata, files, and repository targets. The service streamlines and simplifies the creation of deposit packages by harmonizing user input, repository configurations, bridge modules, and transformers to create deposit packages tailored to the specific needs of each repository target."
 authors = ["Eko Indarto <eko.indarto@dans.knaw.nl>"]
 readme = "README.md"
 packages = [{include = "src"}]
-include = ["resources/*"]
+include = ["resources/utils/*"]
 
 
 [tool.poetry.dependencies]
@@ -50,6 +50,8 @@ opentelemetry-exporter-jaeger-proto-grpc = "^1.21.0"
 opentelemetry-exporter-jaeger-thrift = "^1.21.0"
 opentelemetry-semantic-conventions = "^0.46b0"
 opentelemetry-util-http = "^0.46b0"
+psutil = "^6.0.0"
+cryptography = "^43.0.0"
 
 [build-system]
 requires = ["poetry-core"]
