--- a/conf/settings.toml
+++ b/conf/settings.toml
@@ -22,7 +22,7 @@ tus_files_dir = "@format {env[BASE_DIR]}/data/tmp/tus"
 jinja_template_dir =  "@format {env[BASE_DIR]}/resources/datastation/metadata"
 sendmail_enable = false
 melt_enable = false
-melt_agent_host_name = "localhost"
+melt_agent_host_name = "localhost" #On dansdemo: meltservice (container name)
 multiple_workers_enable = false
 assistant_config_url = "http://localhost:2810" #"https://repository-assistant.labs.dansdemo.nl" #http://localhost:2810"
 transformer_url = "http://localhost:1745/transform" #"https://transformer.labs.dans.knaw.nl/transform" #http://localhost:1745l/transform"
