--- a/conf/settings.toml
+++ b/conf/settings.toml
@@ -4,7 +4,7 @@ loggers = [{"name"="ps", "log_file"="@format {env[BASE_DIR]}/logs/ps.log", "log_
 
 #FastAPI
 fastapi_title = "Packaging Service"
-fastapi_description = "This service supports .."
+fastapi_description = "The Packaging Service is a Python-based application developed by DANS. It is designed to create deposit packages based on user input, which consist of metadata, files, and repository targets. The service streamlines and simplifies the creation of deposit packages by harmonizing user input, repository configurations, bridge modules, and transformers to create deposit packages tailored to the specific needs of each repository target."
 db_dialect="sqlite"
 db_url = "@format ///{env[BASE_DIR]}/data/db/dans_packaging.db"
 data_db_file = "sqlite:{@format {env[BASE_DIR]}/data/db/dans_packaging.db}"
@@ -22,7 +22,7 @@ tus_files_dir = "@format {env[BASE_DIR]}/data/tmp/tus"
 jinja_template_dir =  "@format {env[BASE_DIR]}/resources/datastation/metadata"
 sendmail_enable = false
 melt_enable = false
-melt_agent_host_name = "localhost" #On dansdemo: meltservice (container name)
+melt_agent_host_name = "localhost" #On dans:demo: meltservice (container name)
 multiple_workers_enable = false
 assistant_config_url = "http://localhost:2810" #"https://repository-assistant.labs.dansdemo.nl" #http://localhost:2810"
 transformer_url = "http://localhost:1745/transform" #"https://transformer.labs.dans.knaw.nl/transform" #http://localhost:1745l/transform"
